# Soulforge

./: .gitignore  README.md
.github/workflows/: build-windows-vst3.yml
SoulForgeSynth.vst3/Contents/x86_64-win/: SoulForgeSynth.vst3  SoulForgeSynth.vst3.info
bass/: index.html
mon-synth/: package-lock.json  package.json
mon-synth/public/: index.html
mon-synth/src/: App.js  App.test.js
test/: index.html
vst-source/: BUILD.md  CMakeLists.txt  toolchain-llvm-mingw.cmake  toolchain-mingw64.cmake
vst-source/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
vst-win/: CMakeLists.txt  SoulForgeSynth.cpp  mingw-toolchain.cmake
